--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,8 @@ pipeline {
       steps {
         echo 'Prepare ...'
 		echo 'GitHub clone ...'
+		sh 'pwd'
+		sh 'ls -lah'
 		sh 'git clone git@github.com:Michael-yud/gradle.git'
       }
     }
