--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
     stage('Test') {
       steps {
         echo 'Testing ...'
-	sh 'gradle clean hello'
+	sh 'gradle clean build'
       }
     }
     stage('Deploy') {
