--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
 
   post {
     always {
-       	sh 'cd /home/jenkins/workspace/1steps'
+       	sh 'cd /home/jenkins/workspace/1steps/build/reports/tests/test/index.html'
 	sh 'scp -r * ubuntu@172.31.44.190:/var/www/testgradle_report/'
     }
   }
