--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
   }
   
   options {
-	buildDiscarder(logRotator(numToKeepStr: '10', artifactNumToKeepStr: '10'))
+	buildDiscarder(logRotator(numToKeepStr: '2', artifactNumToKeepStr: '2'))
 	timestamps()
   }
   
@@ -26,7 +26,7 @@ pipeline {
 
   post {
     always {
-       	sh 'cd /home/jenkins/workspace/1steps/build/reports/tests/test/index.html'
+       	sh 'cd /home/jenkins/workspace/1steps/build/reports/tests/test/'
 	sh 'scp -r * ubuntu@172.31.44.190:/var/www/testgradle_report/'
     }
   }
