--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,6 +28,7 @@ pipeline {
     always {
     	sh 'pwd'
        	sh 'cd build/reports/tests/test/'
+	sh 'pwd'
 	sh 'scp -r * ubuntu@172.31.44.190:/var/www/testgradle_report/'
     }
   }
