--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,18 +20,14 @@ pipeline {
     stage('Report') {
       steps {
           echo '---------------'
-	  sh 'pwd'
-	     	sh 'cd build/reports/tests/test/'
+	 
      }
     }
   }
 
   post {
     always {
-    	sh 'pwd'
-    
-	
-	sh 'scp -r * ubuntu@172.31.44.190:/var/www/testgradle_report/'
+	sh 'scp /home/jenkins/workspace/1steps/build/reports/tests/test/* ubuntu@172.31.44.190:/var/www/testgradle_report/'
     }
   }
   
