--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
 
   post {
     success {
-	sh 'scp -R /home/jenkins/workspace/1steps/build/reports/tests/test/* ubuntu@172.31.44.190:/var/www/testgradle_report/'
+	sh 'scp -r /home/jenkins/workspace/1steps/build/reports/tests/test/* ubuntu@172.31.44.190:/var/www/testgradle_report/'
     }
   }
  
